# jarvis

./: .gitignore  .gitmodules
bridge/: .clang-format  CMakeLists.txt  CMakePresets.json
bridge/apps/: CMakeLists.txt  bridge.cpp  bridge_app.cpp  bridge_app.h
bridge/include/bridge/: daemon.h  i2c.h  modules.h  process_lock.h  singleton.h  std_lib.h
bridge/include/bridge/network/: controller.h
bridge/scripts/: bridge.service
bridge/src/: CMakeLists.txt  daemon.cpp  i2c.cpp  modules.cpp  process_lock.cpp
bridge/src/network/: controller.cpp
